test/corpus/basic_object.txt
================================================================================
basic object
================================================================================

{
  a: 1,
  b:: 2,
  c::: 3,
  d+: 4,
  e+:: 5,
  f+::: 6,
}

--------------------------------------------------------------------------------

(source_file
  (object
    (member
      (field
        (fieldname
          (id))
        (hsep)
        (value
          (number))))
    (member
      (field
        (fieldname
          (id))
        (hsep)
        (value
          (number))))
    (member
      (field
        (fieldname
          (id))
        (hsep)
        (value
          (number))))
    (member
      (field
        (fieldname
          (id))
        (hsep)
        (value
          (number))))
    (member
      (field
        (fieldname
          (id))
        (hsep)
        (value
          (number))))
    (member
      (field
        (fieldname
          (id))
        (hsep)
        (value
          (number))))))
