test/corpus/if_index.txt
========
if index
========
{
  get:
    if false then
      x.y
    else
      false
}

---
(source_file
  (expr
    (object
      (member
        (field
          (fieldname
            (id))
          (hsep)
          (value
            (if_expr
              (false)
              (expr
                (index
                  (expr
                    (id))
                  (id)))
              (false))))))))
