test/corpus/nested_if.txt
================================================================================
nested if
================================================================================

if true then
  if true then
    true
  else
    1
else
  false

--------------------------------------------------------------------------------

(source_file
  (if_expr
    (true)
    (if_expr
      (true)
      (true)
      (number))
    (false)))
