test/corpus/odd-block.txt
================================================================================
odd block
================================================================================
[
|||
  
   test
   |||,
   ||| x
|||,
|||
  test


|||,
|||
  
   test
  |||,
   ||| x
|||, // now mix tab and space
|||
 	 space tab space
 	 2
 	 3
 	|||,
|||
		tab
		tab2
  |||,
|||
                                                                                                                                x
                                                                                                                                x
                                                                                                                               |||,
|||
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                y
|||
]

--------------------------------------------------------------------------------

(source_file
  (array
    (string
      (block_string))
    (string
      (block_string))
    (string
      (block_string))
    (line_comment)
    (string
      (block_string))
    (string
      (block_string))
    (string
      (block_string))
    (string
      (block_string))))
