test/corpus/slice.txt
================================================================================
slicing
================================================================================

local to_slice = [1,2,3,4,5,6];
local foo = 2;
local bar = 4;

[
  to_slice[:],
  to_slice[::],
  to_slice[1:2],
  to_slice[1:2:3],
  to_slice[:1],
  to_slice[1:],
  to_slice[1::],
  to_slice[1::2],
  to_slice[::2],
  to_slice[(1)::],
  to_slice[(1)::2],
  to_slice[(1):(2):3],
  to_slice[:0:],
  to_slice[foo:bar],
  to_slice[foo:bar + 1],
  (to_slice)[2:100]
]

--------------------------------------------------------------------------------

(source_file
  (bind_expr
    (bind
      (id)
      (array
        (number)
        (number)
        (number)
        (number)
        (number)
        (number)))
    (bind_expr
      (bind
        (id)
        (number))
      (bind_expr
        (bind
          (id)
          (number))
        (array
          (slice
            (id))
          (slice
            (id))
          (slice
            (id)
            (number)
            (number))
          (slice
            (id)
            (number)
            (number)
            (number))
          (slice
            (id)
            (number))
          (slice
            (id)
            (number))
          (slice
            (id)
            (number))
          (slice
            (id)
            (number)
            (number))
          (slice
            (id)
            (number))
          (slice
            (id)
            (paren
              (number)))
          (slice
            (id)
            (paren
              (number))
            (number))
          (slice
            (id)
            (paren
              (number))
            (paren
              (number))
            (number))
          (slice
            (id)
            (number))
          (slice
            (id)
            (id)
            (id))
          (slice
            (id)
            (id)
            (binary_expr
              (id)
              (number)))
          (slice
            (paren
              (id))
            (number)
            (number)))))))
